--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
+    "foundation-sites": "^6.6.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-foundation": "^0.9.6",
     "react-scripts": "3.3.0"
   },
   "scripts": {
