--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sweetalert/with-react": "^0.1.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.1.2",
@@ -10,7 +11,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-foundation": "^0.9.6",
-    "react-scripts": "3.3.0"
+    "react-modal": "^3.11.1",
+    "react-scripts": "3.3.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
